# FreeGM

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.cb111cb  README.md  compiledialog.cpp  compiledialog.h  compiledialog.ui  constanteditor.cpp  constanteditor.h  constanteditor.ui  eventpicker.ui  gameman.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  objecteditor.cpp  objecteditor.h  objecteditor.ui  resdef.hpp  resman.hpp  resources.qrc  roomeditor.cpp  roomeditor.h  roomeditor.ui  roomorderer.ui  roomview.cpp  roomview.h  roomview.ui  spriteeditor.cpp  spriteeditor.h  spriteeditor.ui  vardefiner.cpp  vardefiner.h  vardefiner.ui
gfx/: transparency.png.old
res/: gmklib-sdl.h
ui/editor/constant/: constanteditor.cpp  constanteditor.h
ui/editor/object/: eventpicker.cpp  eventpicker.h  objecteditor.h  vardefiner.cpp  vardefiner.h  vardefiner.ui
ui/editor/room/: roomeditor.cpp  roomeditor.h  roomeditor.ui
ui/editor/sprite/: spriteeditor.cpp  spriteeditor.h  spriteeditor.ui
ui/main/: compiledialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  roomorderer.cpp  roomorderer.h
